<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/menu"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center"
        android:textSize="32sp"
        android:text="@string/menu" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <RadioGroup
            android:id="@+id/thgr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <RadioButton
                android:id="@+id/light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/light" />

            <RadioButton
                android:id="@+id/dark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/dark" />

            <RadioButton
                android:id="@+id/child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="48dp"
                android:text="@string/child" />
        </RadioGroup>

    </LinearLayout>


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="35dp"
        android:text="@string/textView" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="35dp">

        <RadioButton
            android:id="@+id/ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/ru" />

        <RadioButton
            android:id="@+id/en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/en"
            android:layout_marginBottom="15dp"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <TextView
            android:id="@+id/AV"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:paddingLeft="35dp"
            android:text="@string/author"
            android:layout_weight="5">
        </TextView>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/logo"
        android:layout_weight="1">
    </ImageView>
    </LinearLayout>

</LinearLayout>

</ScrollView>