<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/info"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="5dp"
            android:src="@drawable/info"
            android:text="info"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/action"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:gravity="end"
            android:paddingTop="50dp" />

        <TextView
            android:src="@drawable/paste"
            android:id="@+id/paste"
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/paste" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">
        <TextView
            android:padding="5dp"
            android:id="@+id/mode"
            android:layout_weight="1"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/science" />
        <TextView
            android:id="@+id/result"
            android:layout_width="1dp"
            android:layout_weight="5"
            android:layout_height="70sp"
            android:textColor="#272727"
            android:gravity="end"
            android:ellipsize="start"
            android:textSize="40sp"
            />
        <TextView
            android:src="@drawable/copy"
            android:id="@+id/copy"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="13sp"
            android:text="@string/copy"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/to5"
                style="@style/Button"
                android:text="x₅"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to6"
                style="@style/Button"
                android:text="x₆"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to7"
                style="@style/Button"
                android:text="x₇"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to2"
                style="@style/Button"
                android:text="x₂"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to3"
                style="@style/Button"
                android:text="x₃"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to4"
                style="@style/Button"
                android:text="x₄"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/to8"
                style="@style/Button"
                android:text="x₈"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/ln"
                style="@style/Button"
                android:text="ln"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/log"
                style="@style/Button"
                android:text="log"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/abs"
                style="@style/Button"
                android:text="|x|"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/sinn"
                style="@style/Button"
                android:text="sin"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/coss"
                style="@style/Button"
                android:text="cos"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/tan"
                style="@style/Button"
                android:text="tan"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/fac"
                style="@style/Button"
                android:text="x!"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/pow"
                style="@style/Button"
                android:text="^"
                android:visibility="gone">
            </TextView>
            <TextView
                style="@style/Button"
                android:text="C"
                android:visibility="gone">
            </TextView>
            <TextView
                android:id="@+id/cle"
                style="@style/Button"
                android:text="C">
            </TextView>
            <TextView
                android:id="@+id/lef"
                style="@style/Button"
                android:text="(">
            </TextView>
            <TextView
                android:id="@+id/rig"
                style="@style/Button"
                android:text=")">
            </TextView>
            <TextView
                android:id="@+id/div"
                style="@style/Button"
                android:text="/">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/sev"
                style="@style/Button"
                android:text="7">
            </TextView>
            <TextView
                android:id="@+id/eig"
                style="@style/Button"
                android:text="8">
            </TextView>
            <TextView
                android:id="@+id/nin"
                style="@style/Button"
                android:text="9">
            </TextView>
            <TextView
                android:id="@+id/mul"
                style="@style/Button"
                android:text="×">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/fou"
                style="@style/Button"
                android:text="4">
            </TextView>
            <TextView
                android:id="@+id/fiv"
                style="@style/Button"
                android:text="5">
            </TextView>
            <TextView
                android:id="@+id/six"
                style="@style/Button"
                android:text="6">
            </TextView>
            <TextView
                android:id="@+id/plu"
                style="@style/Button"
                android:text="+">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/one"
                style="@style/Button"
                android:text="1">
            </TextView>
            <TextView
                android:id="@+id/two"
                style="@style/Button"
                android:text="2">
            </TextView>
            <TextView
                android:id="@+id/thr"
                style="@style/Button"
                android:text="3">
            </TextView>
            <TextView
                android:id="@+id/min"
                style="@style/Button"
                android:text="-">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:orientation="horizontal"
            android:layout_weight="1">
            <TextView
                android:id="@+id/und"
                style="@style/Button"
                android:text="←">
            </TextView>
            <TextView
                android:id="@+id/zer"
                style="@style/Button"
                android:text="0">
            </TextView>
            <TextView
                android:id="@+id/dot"
                style="@style/Button"
                android:text=".">
            </TextView>
            <TextView
                android:id="@+id/equ"
                style="@style/Button"
                android:text="=">
            </TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>